--- a/style.css
+++ b/style.css
@@ -15,3 +15,42 @@ nav{
 input {
     background: grey;
 }
+.row::after{
+    content:"";
+    clear: both;
+    display:table;
+}
+.travel_mainDiv{
+    float:left;
+    width:33.33%;
+    padding:5px;
+    border:1px solid #c7c7c7;
+        
+}
+.travel_mainDiv img{
+    width:100%;
+    height:300px; 
+}
+.travel_mainDiv hr{
+    width:100%;
+}
+.travel_mainDiv h5, .travel_mainDiv p{
+    margin-left:20px;
+}
+.achievementID{
+    padding-bottom:10px;
+}
+.movie_head{
+    font-size:20px;
+    padding:6px 22px; 
+    border-radius:10px;
+    margin-bottom:15px; 
+    width:100%;
+    display:inline-block;
+}
+.movie_head i{
+    float:right;
+}
+.movie_text span{
+    color:#ff7700;
+}
